feat: add mobile detection APIs
